--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,238 @@
 }
 
 body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   font-size: 14px;
   font-family: "Raleway", sans-serif;
+  background: url("./images/bg-mobile.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 100vh;
+}
+
+.component {
+  max-width: 500px;
+  width: 100%;
+  margin: 0 1.5rem;
+}
+
+.container {
+  background-color: #1d2c67;
+  padding: 2rem;
+}
+
+.container--curvedRight {
+  border-radius: 10px 100px 10px 10px;
+  margin-bottom: 1rem;
+}
+
+.container__logo {
+  margin-bottom: 1.5rem;
+}
+
+.features {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.featureContainer {
+  background-color: #0c122c;
+  margin-right: 1rem;
+  border-radius: 12px;
+  height: 52.5px;
+  width: 55px;
+  cursor: pointer;
+  position: relative;
+}
+
+.featureContainer__icon {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.featureContainer:hover {
+  -webkit-transform: translateY(-5%);
+          transform: translateY(-5%);
+}
+
+.container--normal {
+  position: relative;
+  border-radius: 10px;
+}
+
+.container__text {
+  color: #dddbff;
+}
+
+.container__text--bold {
+  font-weight: 700;
+}
+
+.container__text--center {
+  text-align: center;
+  margin-bottom: 1rem;
+}
+
+.progBarContainer {
+  height: 1.25rem;
+  padding: 0.25rem;
+  border-radius: 12px;
+  margin-bottom: 0.75rem;
+  background-color: #0c122c;
+}
+
+.progBar {
+  position: relative;
+  height: 100%;
+  width: 60%;
+  padding: 0.25rem;
+  border-radius: 12px;
+  background: -webkit-gradient(linear, left top, right top, from(#ffa399), to(#ff4d97));
+  background: linear-gradient(to right, #ffa399, #ff4d97);
+}
+
+.progBar__circle {
+  position: absolute;
+  top: 50%;
+  right: 0;
+  width: 10px;
+  height: 70%;
+  border-radius: 50%;
+  background-color: white;
+  -webkit-transform: translate(-20%, -50%);
+          transform: translate(-20%, -50%);
+}
+
+.progBarTextContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-bottom: 2rem;
+}
+
+.remainingStorage {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  padding: 1rem;
+  border-radius: 7px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: white;
+  max-width: 185px;
+  width: 100%;
+  -webkit-transform: translate(-50%, 50%);
+          transform: translate(-50%, 50%);
+}
+
+.remainingStorage__num {
+  font-size: 2.5rem;
+  color: #0c122c;
+  margin-right: 1rem;
+}
+
+.remainingStorage__text {
+  color: #848794;
+  font-weight: 700;
+}
+
+@media (min-width: 875px) {
+  html {
+    background-color: #0c122c;
+  }
+  body {
+    background: url("./images/bg-desktop.png"), -webkit-gradient(linear, left top, left bottom, from(#0c122c));
+    background: url("./images/bg-desktop.png"), linear-gradient(#0c122c);
+    background-size: 100% 50%;
+    background-position: center bottom;
+    background-repeat: no-repeat;
+  }
+  .component {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    max-width: 955px;
+    width: 100%;
+    margin: 0 1.5rem;
+  }
+  .container--curvedRight {
+    margin-bottom: 0rem;
+    margin-right: 1.5rem;
+  }
+  .features {
+    padding-right: 3rem;
+  }
+  .container--normal {
+    width: 100%;
+    max-width: 600px;
+    min-width: 500px;
+    -ms-flex-item-align: end;
+        align-self: flex-end;
+  }
+  .container__text--center {
+    text-align: left;
+  }
+  .progBarTextContainer {
+    margin-bottom: 0rem;
+  }
+  .remainingStorage {
+    border-radius: 7px 7px 0 7px;
+    bottom: auto;
+    top: 0;
+    left: auto;
+    right: 0;
+    padding: 0.75rem 1rem;
+    -webkit-transform: translate(-20%, -75%);
+            transform: translate(-20%, -75%);
+  }
+  .remainingStorage::before {
+    position: absolute;
+    content: "";
+    bottom: -19px;
+    right: 0;
+    border-top: 20px solid white;
+    border-left: 20px solid transparent;
+  }
 }
 /*# sourceMappingURL=styles.css.map */
